# ariostea

./: .gitignore  ARCHITECTURE.md  LICENSE  README.md  ariostea.example.toml  pyproject.toml
.github/workflows/: ci.yml
docs/design/: 2026-07-09-eval-corpus-expansion.md
docs/plans/: 2026-07-13-eval-harness-span-gold.md
docs/superpowers/plans/: 2026-06-12-ariostea-phase0-1-walking-skeleton.md  2026-06-21-ariostea-phase2-hybrid-search.md  2026-06-26-ariostea-phase3-sources-and-fetch.md  2026-06-27-ariostea-eval-harness.md  2026-06-28-ariostea-contextual-retrieval.md  2026-06-28-ariostea-gold-set-expansion.md  2026-06-28-ariostea-incremental-watch.md  2026-06-28-ariostea-multilingual-reranking.md  2026-06-29-ariostea-contextual-lift-eval.md  (+1 more)
eval/: contextual_gold.json  gold.json  run_contextual_eval.py  run_eval.py
eval/contextual_corpus/: bicycle.md  camera.md  checkers.md  chess.md  drums.md  guitar.md  motorcycle.md  piano.md  smartphone.md  violin.md
eval/corpus/: alfareria_es.md  astronomia_it.md  beekeeping_en.md  ciclismo_es.md  cucito_it.md  dadi_it.md  dice_en.md  pasta_en.md  pasta_it.md
eval/wiki/: NOTICE  gold.sample.json
src/ariostea/: cli.py
tests/: test_cli.py  test_end_to_end.py  test_smoke.py
tests/config/: test_container.py  test_schema.py
tests/domain/: test_models.py
tests/eval/: test_channels.py  test_channels_integration.py  test_contextual_corpus.py  test_contextual_helpers.py  test_corpus_fixtures.py  test_gold_set.py  test_harness.py  test_harness_integration.py  test_metrics.py  test_span_channels.py  test_span_metrics.py  test_spaneval.py  test_wiki_gold.py
tests/indexing/: test_contextual_lift.py  test_index_vault.py  test_scanner.py  test_watch_vault.py
tests/mcp/: test_handlers.py  test_server.py
tests/ports/: test_protocols.py
tests/search/: test_search_knowledge.py  test_search_sources.py
(+51 files in other folders)
