[project]
name = "ariostea"
version = "0.0.1"
description = "Local-first, Obsidian-aware RAG MCP server"
requires-python = ">=3.12"
dependencies = [
  "mcp>=1.2",
  "fastembed>=0.4",
  "sqlite-vec>=0.1.6",
  "pydantic>=2.6",
  "typer>=0.12",
  "watchfiles>=0.24",
]

[project.scripts]
ariostea = "ariostea.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ariostea"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
markers = ["integration: tests that load real models or hit external services"]

[dependency-groups]
dev = ["pytest>=8"]
